[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/8 Bttons/botao_pulo.png" type="Texture" id=1]
[ext_resource path="res://assets/8 Bttons/botao_esquerda - Copia.png" type="Texture" id=2]
[ext_resource path="res://assets/8 Bttons/botao_direita - Copia.png" type="Texture" id=3]
[ext_resource path="res://scenes/hud_elements/botoes.gd" type="Script" id=4]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 24, 519 )
scale = Vector2( 0.111328, 0.111328 )
normal = ExtResource( 1 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="."]
position = Vector2( 852, 518 )
scale = Vector2( 0.111328, 0.111328 )
normal = ExtResource( 2 )

[node name="TouchScreenButton3" type="TouchScreenButton" parent="."]
position = Vector2( 928, 519 )
scale = Vector2( 0.111328, 0.111328 )
normal = ExtResource( 3 )

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
[connection signal="pressed" from="TouchScreenButton2" to="." method="_on_TouchScreenButton2_pressed"]
[connection signal="released" from="TouchScreenButton2" to="." method="_on_TouchScreenButton2_released"]
[connection signal="pressed" from="TouchScreenButton3" to="." method="_on_TouchScreenButton3_pressed"]
[connection signal="released" from="TouchScreenButton3" to="." method="_on_TouchScreenButton3_released"]
